# subj-reader

./: README.md  devenv.nix  main.py  pyproject.toml
